# socrates

./: .gitignore  CLAUDE.md  LICENSE  README.md  assessment_engine.py  learner_model.py  pyproject.toml  requirements.txt  tutor_app.py  tutor_mcp_server.py
static/: index.html
tests/: test_assessment_engine.py
