[project]
name = "socrates"
version = "0.1.0"
description = "Socrates — an adaptive tutoring system powered by Claude CLI and MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
